Kubernetes/3eureka.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-eureka-server
  namespace: microservicios
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ms-eureka-server
  template:
    metadata:
      labels:
        app: ms-eureka-server
    spec:
      containers:
        - name: ms-eureka-server
          image: ransilvav29/ms-eureka-server:1.0  # Cambiado
          ports:
            - containerPort: 8761
---
apiVersion: v1
kind: Service
metadata:
  name: ms-eureka-server
  namespace: microservicios
spec:
  selector:
    app: ms-eureka-server
  ports:
    - port: 8761
      targetPort: 8761
      nodePort: 30761
  type: NodePort
