Kubernetes/5ms-sincronizacion.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-sincronizacion
  namespace: microservicios
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ms-sincronizacion
  template:
    metadata:
      labels:
        app: ms-sincronizacion
    spec:
      containers:
        - name: ms-sincronizacion
          image: ransilvav29/sincronizacion:1.0
          ports:
            - containerPort: 8084
---
apiVersion: v1
kind: Service
metadata:
  name: ms-sincronizacion
  namespace: microservicios
spec:
  selector:
    app: ms-sincronizacion
  ports:
    - port: 8084
      targetPort: 8084
      nodePort: 30084
  type: NodePort
