Kubernetes/6ms-catalogo.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-catalogo
  namespace: microservicios
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ms-catalogo
  template:
    metadata:
      labels:
        app: ms-catalogo
    spec:
      containers:
        - name: ms-catalogo
          image: ransilvav29/ms-catalogo:1.0
          ports:
            - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: ms-catalogo
  namespace: microservicios
spec:
  selector:
    app: ms-catalogo
  ports:
    - port: 8082
      targetPort: 8082
      nodePort: 30082
  type: NodePort
