Kubernetes/7ms-publicaciones.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-publicaciones-repaso
  namespace: microservicios
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ms-publicaciones-repaso
  template:
    metadata:
      labels:
        app: ms-publicaciones-repaso
    spec:
      containers:
        - name: ms-publicaciones-repaso
          image: ransilvav29/ms-publicaciones-repaso:1.0
          ports:
            - containerPort: 8088
---
apiVersion: v1
kind: Service
metadata:
  name: ms-publicaciones-repaso
  namespace: microservicios
spec:
  selector:
    app: ms-publicaciones-repaso
  ports:
    - port: 8088  # Alineado con el puerto del contenedor
      targetPort: 8088
      nodePort: 30080
  type: NodePort
