Kubernetes/8ms-notificaciones.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-notificaciones
  namespace: microservicios
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ms-notificaciones
  template:
    metadata:
      labels:
        app: ms-notificaciones
    spec:
      containers:
        - name: ms-notificaciones
          image: ransilvav29/ms-notificaciones:1.0
          ports:
            - containerPort: 8085
---
apiVersion: v1
kind: Service
metadata:
  name: ms-notificaciones
  namespace: microservicios
spec:
  selector:
    app: ms-notificaciones
  ports:
    - port: 8085
      targetPort: 8085
      nodePort: 30085
  type: NodePort
