Kubernetes/9ms-authentication.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-authentication
  namespace: microservicios
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ms-authentication
  template:
    metadata:
      labels:
        app: ms-authentication
    spec:
      containers:
        - name: ms-authentication
          image: ransilvav29/ms-authentication:1.0
          ports:
            - containerPort: 8083
---
apiVersion: v1
kind: Service
metadata:
  name: ms-authentication
  namespace: microservicios
spec:
  selector:
    app: ms-authentication
  ports:
    - port: 8083
      targetPort: 8083
      nodePort: 30083
  type: NodePort
