Kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservicios-ingress
  namespace: microservicios
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: app-publicaciones.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ms-1pi-gateway
                port:
                  number: 8000
    - host: ms-eureka-server.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ms-eureka-server
                port:
                  number: 8761
    - host: rabbitmq.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rabbitmq
                port:
                  number: 15672
